syntax = "proto3";

option csharp_namespace = "SudokuServer";

package sudoku;

service SudokuService {
  rpc Connect (stream Request) returns (stream Event);
}

message Point {
  int32 x = 1;
  int32 y = 2;
  int32 value = 3;
}

// --------
// Requests
// --------

message Request {
  oneof request {
    LoginRequest login = 1;
    PlayRequest play = 2;
    TurnRequset turn = 3;
  }
}

message LoginRequest {
  string login = 1;
}

message PlayRequest {
}

message TurnRequset {
    Point point = 1;
}

// ------
// Events
// ------

message Event {
  oneof event {
    LoginEvent login = 1;
    PlayEvent play = 2;
    TurnEvent turn = 3;
    WinEvent win = 4;
  }
}

message LoginEvent {
  bool success = 1;
}

message PlayEvent {
    repeated Point points = 1;
}

message TurnEvent {
    bool success = 1;
}

message WinEvent {
}